AGENT-615: Split create-cluster-and-infraenv.service
The service has been removed and split into
agent-register-cluster.service
agent-register-infraenv.service

Both services continuously retries until their respective resource
has been registered with the assisted-service REST-API or if the
client sees that a resource as already been registered.

Signed-off-by: Richard Su <rwsu@redhat.com>

--- a/data/data/agent/systemd/units/apply-host-config.service
+++ b/data/data/agent/systemd/units/apply-host-config.service
@@ -1,9 +1,9 @@
 [Unit]
 Description=Service that applies host-specific configuration
 Wants=network-online.target
-Requires=create-cluster-and-infraenv.service
+Requires=agent-register-infraenv.service
 PartOf=assisted-service-pod.service
-After=network-online.target create-cluster-and-infraenv.service
+After=network-online.target agent-register-infraenv.service
 ConditionPathExists=/etc/assisted/node0
 
 [Service]
